# inspect-docker-images

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: trivy-scan.yml
cat_app/: app.py
docker/: 0_original.Dockerfile  1_base_image.Dockerfile  2_remove_packages.Dockerfile  3_layering.Dockerfile  4_poetry.Dockerfile  5_secrets.Dockerfile  6_non_root_user.Dockerfile  7_bind_mount.Dockerfile  7_multi_stage.Dockerfile  8_multi_stage.Dockerfile  9_nice_to_haves.Dockerfile
tests/: test_app.py
