[tool.poetry]
name = "cat_app"
version = "0.1.0"
description = "Flask app that shows random cat images"
authors = ["Irena Grgic"]
readme = "README.md"
packages = [ {include = "cat_app"} ]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
random-cat-generator = {version = "^0.1.1", source = "pythonmonty"}
requests = "^2.32.3"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pythonmonty"
url = "https://pkgs.dev.azure.com/pythonmonty/Demo/_packaging/random-cat-generator/pypi/simple/"
priority = "explicit"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
